--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,6 +19,15 @@ jobs:
       run: npx playwright install --with-deps
     - name: Run Playwright tests
       run: npx playwright test
+    - name: Install Allure CLI
+      run: npm install -g allure-commandline --save-dev
+    - name: Generate Allure Report
+      run: allure generate ./allure-results --clean -o ./allure-report
+    - name: Upload Allure Report as Artifact
+      uses: actions/upload-artifact@v3
+      with:
+          name: allure-report
+          path: ./allure-report
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
