--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,18 +19,10 @@ jobs:
       run: npx playwright install --with-deps
     - name: Run Playwright tests
       run: npx playwright test
-    - name: Install Allure CLI
-      run: npm install -g allure-commandline --save-dev
-    - name: Generate Allure Report
-      run: allure generate ./allure-results --clean -o ./allure-report
-    - name: Upload Allure Report as Artifact
+    - name: Upload Playwright Report as Artifact
       uses: actions/upload-artifact@v4
+      if: ${{ !cancelled() }}
       with:
-          name: allure-report
-          path: ./allure-report
-    # - name: Upload Playwright Report as Artifact
-    #   uses: actions/upload-artifact@v4
-    #   with:
-    #     name: playwright-report
-    #     path: playwright-report/
-    #     retention-days: 30
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 30
